ENH: Added simple reconstruction command.

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -4,5 +4,8 @@
 add_executable( ImageSeriesReadWrite  ImageSeriesReadWrite.cxx )
 target_link_libraries( ImageSeriesReadWrite ${ITK_LIBRARIES} )
 
+add_executable( SimpleImageReconstruction  SimpleImageReconstruction.cxx )
+target_link_libraries( SimpleImageReconstruction ${ITK_LIBRARIES} )
+
 add_executable( MedianImageFilter  MedianImageFilter.cxx )
 target_link_libraries( MedianImageFilter ${ITK_LIBRARIES} )
