--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -4,4 +4,5 @@
 
 set(TEMP ${PROJECT_BINARY_DIR}/Testing/Temporary)
 
+# ./bin/SimpleImageReconstruction "/home/ibanez/data/BroadInstitute/Harvard/GamLiveDevelopment/Image0010.tif.frames/Image0010_C001Z%03d.tif" 1 31  1e-05 1e-05 13e-5 Image0010_C001Z.mhd
 
