--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -9,3 +9,6 @@ target_link_libraries( SimpleImageReconstruction ${ITK_LIBRARIES} )
 
 add_executable( MedianImageFilter  MedianImageFilter.cxx )
 target_link_libraries( MedianImageFilter ${ITK_LIBRARIES} )
+
+add_executable( ExtractSurface  ExtractSurface.cxx )
+target_link_libraries( ExtractSurface vtkHybrid)
