ENH: Test for new collection of data.
Datasets 61, 72, 75, 77.

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -15,3 +15,9 @@ target_link_libraries( ExtractSurface vtkHybrid)
 
 add_executable( ComputeSurfaceAndVolume  ComputeSurfaceAndVolume.cxx )
 target_link_libraries( ComputeSurfaceAndVolume vtkHybrid)
+
+add_executable( RobustThresholdingPerSlice  RobustThresholdingPerSlice.cxx )
+target_link_libraries( RobustThresholdingPerSlice ${ITK_LIBRARIES})
+
+add_executable( OtsuThresholdingPerSlice  OtsuThresholdingPerSlice.cxx )
+target_link_libraries( OtsuThresholdingPerSlice ${ITK_LIBRARIES})
